removing showAllQuestionsSwagger
